# OpenAtlas

./: .gitignore  README.md  docker-compose.yaml  install.md  pyproject.toml
.github/: auto-deploy-values.yaml
.github/workflows/: starter.yaml
config/: api.py  database_versions.py  default.py
config/model/: class_groups.py  model.py
config/model/classes/: actor.py  (+6 more)
install/: 0_extensions.sql  1_structure.sql  3_data_web.sql  4_data_type.sql  data_test_api.sql
install/docker/: Dockerfile
install/import_scripts/: femcare_archeological.py  femcare_clean_up.py  welterbe_cadaster.py  welterbe_restructure.py  welterbe_restructure2.py
install/multi_instance/: application_path.py  database_upgrade.py  openatlas.wsgi
install/upgrade/: 9.2.0.sql  9.3.0.sql  9.4.0.sql  database_upgrade.py  standard_api.sql  upgrade.md
instance/: example_production.py
openatlas/: __init__.py
openatlas/api/: openapi.json  routes.py
openatlas/database/: entity.py  gis.py  rights_holder.py
openatlas/display/: display.py  image_processing.py  table.py  util.py  util2.py
openatlas/forms/: add_fields.py  display.py  entity_form.py  field.py
openatlas/models/: checks.py  content.py  dates.py  entity.py  export.py  gis.py  imports.py  openatlas_class.py  rights_holder.py  search.py
openatlas/static/: import_field_matrix.csv  package-lock.json
openatlas/templates/: import_data.html  map.html  rights_holder.html
openatlas/translations/: messages.pot
openatlas/views/: admin.py  ajax.py  annotation.py  anthropology.py  changelog.py  checks.py  entity.py  export.py  file.py  hierarchy.py  imports.py  index.py  login.py  overlay.py  rights_holder.py  token.py  type.py  user.py  vocabs.py
sphinx/source/: conf.py  index.rst
tests/: .coveragerc  invalid_2.csv  test_api.py  test_date.py  test_event.py  test_export.py  test_export_import.py  test_file.py  test_hierarchy.py  test_image.py  test_item.py  test_place.py  test_reference_system.py  test_rights_holder.py  test_search.py  test_source.py  test_type.py  test_user.py
(+193 files in other folders)
